<resources>
    <string name="app_name">Contacts App</string>
    <string name="add_contact">Add Contact</string>
    <string name="hint_contact">Contact...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Invalid Contact ,can\'t be saved.</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_no">Phone No.</string>
    <string name="first_name_error">First name invalid</string>
    <string name="last_name_error">Last name invalid</string>
    <string name="phone_number_error">Phone number invalid</string>
    <string name="email_error">Invalid Email</string>
    <string name="Contacts">Contacts</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="update_contact">Marked favorite.</string>
    <string name="email_functionality">Email functionality is in progress</string>
    <string name="call_functionality">Call functionality is in progress</string>
    <string name="text_funcationality">Messaging functionality is in progress</string>
    <string name="contact_updated">Contact updated succssfully</string>
</resources>
