<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:elevation="4dp"
        android:background="@drawable/seagreen_gradient"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cancelAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/primaryTextColor"/>

        <TextView
            android:id="@+id/doneAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textColor="@color/primaryTextColor"/>





        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="30dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_user"/>



    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginEnd="@dimen/big_padding"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/first_name"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/text_grey"
            android:layout_height="wrap_content"/>


        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:inputType="textPersonName"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="14sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginEnd="@dimen/big_padding"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/last_name"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/text_grey"
            android:layout_height="wrap_content"/>


        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="14sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginEnd="@dimen/big_padding"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/phone_no"
            android:textSize="14sp"
            android:layout_marginStart="12dp"
            android:textColor="@color/text_grey"
            android:layout_height="wrap_content"/>


        <EditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginEnd="@dimen/big_padding"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/e_mail"
            android:textSize="14sp"
            android:layout_marginStart="35dp"
            android:textColor="@color/text_grey"
            android:layout_height="wrap_content"/>


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="14sp" />

    </LinearLayout>



</LinearLayout>